--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,25 +8,33 @@
     {% endfor %}
 
     {% if table %}
-        <h1>{{ table['table_name'] }}</h1>
-        <form class="basic-form" action="/admin" method="post" name="">
-            <input type="hidden" name="table_name" value="{{ table['table_name'] }}">
+        <h1>{{ table['name'] }}</h1>
+        <form class="table" action="/admin" method="post" name="">
+            <input type="hidden" name="table_name" value="{{ table['name'] }}">
             {% for key in table['keys'] %}
-                {% if key['name'] != 'id'%}
-                    <input type="text" name="{{ key['name'] }}" value="" placeholder="{{ key['name'] }}">
+                {% if key != 'id'%}
+                    {% if table['keys'][key] == None %}
+                        <input type="text" name="{{ key }}" value="" placeholder="{{ key }}">
+                    {% else %}
+                        <select name="{{ key }}">
+                            {% for option in table['keys'][key] %}
+                                <option value="{{ option }}">{{ option }}</option>
+                            {% endfor %}
+                        </select>
+                    {% endif %}
                 {% endif %}
             {% endfor %}
-            <input type="submit" name="{{ table['table_name'] }}" value="add">
+            <input type="submit" name="{{ table['name'] }}" value="add">
         </form>
 
         <table class="table">
             {% for key in table['keys'] %}
-                    <th>{{ key['name'] }}</th>
+                    <th>{{ key }}</th>
             {% endfor %}
             {% for row in table['data'] %}
                 <tr>
                 {% for cell in row %}
-                    <td>{{ cell }}</td>
+                    <td>{{ row[cell] }}</td>
                 {% endfor %}
                 </tr>
             {% endfor %}
