--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block main %}
 
-<h1>ROUTE INDEX</h1>
+    {% for card in cards %}
+        <h1>{{ card }}</h1>
+    {% endfor %}
 
 {% endblock %}
