--- a/static/main.css
+++ b/static/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: white;
+    background-color: #f5f4f4;;
     font-family: sans-serif;
     font-weight: normal;
     text-align: left;
@@ -28,7 +28,7 @@ nav {
 }
 
 nav ul {
-    display: inline; */
+    display: inline;
     list-style: none;
     font-weight: 400;
     margin: 0;
@@ -45,3 +45,30 @@ li {
     margin-top: 2em;
     padding: 2em;
 }
+
+.center-content{
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+}
+
+.cards-container{
+    margin: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cards {
+    padding: 25pt;
+    text-align: center;
+    margin-bottom: 30pt;
+    background-color: #fffefe;
+    width: fit-content;
+    box-shadow: 7px 7px 7px 0px #dedede;
+}
+
+.cards:hover {
+    transform: rotate(1.5deg);
+}
+    transform: rotate(10deg);
