--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,10 +13,10 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="index.html">gallery</a></li>
-                    <li><a href="index.html">create</a></li>
-                    <li><a href="index.html">log-in</a></li>
-                    <li><a href="index.html">about</a></li>
+                    <li><a href="/">gallery</a></li>
+                    <li><a href="/">create</a></li>
+                    <li><a href="/">log-in</a></li>
+                    <li><a href="/">about</a></li>
                 </ul>
             </nav>
         </header>
