--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,102 @@
 
 {% block main %}
     <div class="center-content">
-        <div id="refresh" class="icon" style="width: 3em">
+        <div class="logo">
+            <div class="svg-container">
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 24.0.2, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 355.18 173.2" enable-background="new 0 0 355.18 173.2" xml:space="preserve">
+                <g id="lines">
+                </g>
+                <g id="title">
+                    <g>
+                        <g>
+                            <path fill="#333333" d="M355.09,112.62c-0.44-13.14-1.53-26.24-3.48-39.29c-2.21-14.79-4.64-29.53-7.57-44.19
+                                c-0.16-0.81-0.1-2.11-1.73-2.12c-1.63,3.3,0.06,6.44,0.48,9.65c1.61,12.04,3.84,23.99,5.64,36c2.59,17.35,4.13,34.71,3.45,52.25
+                                c-0.22,5.69-1.24,11.24-2.98,16.66c-0.92,2.89-2.3,5.56-4.28,7.84c-2.59,2.98-5.11,3.29-8.35,1.02
+                                c-1.07-0.75-2.03-1.74-2.82-2.79c-4.53-6.11-7.37-13.06-8.87-20.42c-1.7-8.31-2.78-16.74-4.2-25.11
+                                c-1.12-6.59-1.3-13.25-1.45-19.91c-0.02-0.85-0.52-2.07,0.89-2.49c1.14,0.54,0.99,1.65,1.14,2.58
+                                c1.03,6.41,1.96,12.83,3.05,19.23c1.57,9.18,2.48,18.48,4.9,27.52c1.18,4.42,2.93,8.51,5.84,12.03c1.87,2.27,4.29,4.03,7.38,3.13
+                                c2.84-0.83,3.09-3.61,3.51-6.09c1.76-10.42,0.89-20.94,1.27-31.41c0.59-16.08-3-31.8-3.97-47.75c-0.6-9.79-2.11-19.51-2.14-29.36
+                                c-0.01-1.99,0.21-4.31-1.69-6c-1.63,1.26-1.11,2.87-0.99,4.25c0.71,8.12,0.56,16.28,1.65,24.39c0.88,6.59,0.67,13.34,1.74,19.89
+                                c2.21,13.55,2.86,27.15,2.59,40.83c-0.16,7.82,0.3,15.67-1.11,23.43c-0.21,1.14-0.41,2.3-0.8,3.38
+                                c-0.57,1.61-1.73,1.87-3.18,1.07c-1.36-0.74-2.29-1.91-3.15-3.15c-2.11-3.06-3.35-6.48-4.29-10.05
+                                c-2.5-9.53-3.42-19.34-5.03-29.02c-1.72-10.34-2.99-20.76-6.1-30.83c-0.79-2.55-1.46-5.15-2.92-7.41
+                                c-1.39-2.15-2.9-2.11-4.11,0.15c-1.34,2.51-2.08,5.25-2.48,8.08c-2.38,16.81-4.63,33.64-7.19,50.42
+                                c-1.33,8.71-2.85,17.43-6.51,25.57c-0.45,0.99-0.53,2.35-2.17,2.41c-0.25-0.38-0.6-0.76-0.78-1.21
+                                c-4.6-11.71-7.59-23.76-7.61-36.44c-0.01-7.49-0.06-14.98-0.96-22.45c-0.98-8.1-1.58-16.24-2.41-24.35
+                                c-1.37-13.26-1.8-26.58-2.7-39.87c-0.07-1.07,0.33-2.4-1.06-3.07c-3.2,1.64-4.05,4.27-3.93,7.73c0.22,6.49-0.03,12.99,0.07,19.49
+                                c0.25,16.33,0.81,32.65,3.52,48.79c2.23,13.29,3.99,26.66,6.46,39.92c1.22,6.56,3.46,12.46,6.83,18.05
+                                c2.04,3.37,5.61,4.06,8.99,1.81c2.43-1.62,4.06-3.91,5.14-6.6c1-2.49,1.52-5.09,1.87-7.74c2.46-18.48,4.54-37.01,6.19-55.58
+                                c0.17-1.95,0.17-4.03,1.91-6.7c0.37,8.06-0.02,15.07,1.11,22c1.36,8.38,2.77,16.75,3.83,25.17c0.94,7.45,4.3,13.96,7.39,20.57
+                                c0.89,1.9,2.48,3.57,4.02,5.06c5.13,4.98,10.6,4.43,14.8-1.34c2.08-2.86,3.44-6.06,4.46-9.44
+                                C355.04,131.61,355.4,122.08,355.09,112.62z M278.27,33.74c1.83,22.2,4.64,44.38,5.27,66.73
+                                C278.14,78.53,278.33,56.15,278.27,33.74z M308.78,114.25c0.06,0.82,0,1.67-0.1,2.49c-0.98,8.25-1.91,16.51-3.02,24.74
+                                c-0.44,3.28-1.1,6.61-3.3,9.29c-1.45,1.76-2.98,3.64-6.45,2.54c7.99-13.05,9.33-27.41,11.95-41.69
+                                C309.22,112.4,308.72,113.45,308.78,114.25z"/>
+                        </g>
+                        <g>
+                            <path fill="#333333" d="M54.31,12.83C49.5,5.71,44.16,0.01,34.71,0.56c-0.33,0.02-0.66-0.08-0.99-0.14
+                                C27.56-0.71,21.9,0.43,16.7,4.02c-2.2,1.52-3.64,3.32-3.73,6.09c-0.1,3.35-1.01,6.57-1.64,9.84C9.49,29.59,7.96,39.3,7.02,49.06
+                                c-0.81,8.45-1.33,16.95-2.78,25.3c-3.56,20.6-5.02,41.3-3.84,64.95c0.71,6.52,0.65,15.84,0.72,25.17c0.02,1.98,0.28,4,0.72,5.93
+                                c0.65,2.87,2.21,3.52,4.71,1.93c1.38-0.88,2.59-2.09,3.72-3.29c2.06-2.18,4-4.46,5.99-6.7c7.89-8.87,14.7-18.55,20.32-28.97
+                                c7.6-14.09,13.18-29.08,18.96-43.98c1.39-3.6,2.42-7.29,2.76-11.11c0.96-10.77,2.76-21.44,3.68-32.23
+                                C62.99,34.04,61.19,23.01,54.31,12.83z M5.11,169.53c-1.16-1.32-1.28-2.98-1.26-4.56c0.13-12.16-0.75-24.29-1.17-36.43
+                                C2.04,110.17,3.93,92,6.91,73.88c1.32-8.03,1.84-16.2,2.48-24.32c0.47-5.95,1.56-11.77,2.87-17.59c0.8,2.1,0.58,4.23,0.43,6.34
+                                c-0.87,12.12-2.67,24.14-4.17,36.19c-0.54,4.31-0.9,8.63-0.78,12.95c0.32,11.49,0.01,22.98-0.09,34.46
+                                c-0.09,9.83-0.45,19.63-1.5,29.41c-0.39,3.63-0.23,7.32-0.27,10.98c-0.01,0.96-0.07,1.93,0.61,2.82
+                                C8.24,167.39,8.2,167.42,5.11,169.53z M33.57,130.85c-4.65,6.69-9.31,13.37-13.98,20.05c-1.98,2.84-8.56,8.79-11.43,10.31
+                                c-0.73-1.61-0.44-3.25-0.21-4.83c3.03-20.68,2.76-41.51,2.47-62.31c-0.16-11.39,1.21-22.58,2.46-33.82
+                                c1.5-13.56,3.46-27.11,1.89-40.8c-0.41-3.56,0.76-6.92,0.86-10.41c0.04-1.48,1.36-2.25,2.53-2.87c2.39-1.26,5-2.13,7.68-1.71
+                                c9.96,1.53,17.89,5.95,21.99,15.77c5.94,14.21,6.95,28.85,5.12,44.05c-2.17,17.94-6.38,35.32-12.17,52.38
+                                C39.07,121.73,36.63,126.45,33.57,130.85z M59.35,43.93c-1.01,12.26-2.99,24.39-4.29,36.6c-0.17,1.63-0.23,3.33-1.82,4.8
+                                c-0.8-1.05-0.4-2.06-0.23-3.09c1.8-11.32,3.83-22.61,3.59-34.14c-0.23-10.59-2.27-20.81-6.87-30.38
+                                c-2.25-4.68-5.38-8.77-10.03-11.46c-0.66-0.38-1.61-0.54-1.8-2.2c3.65-0.15,6.34,1.22,8.61,3.58
+                                C56.25,17.8,60.52,29.74,59.35,43.93z"/>
+                        </g>
+                        <g>
+                            <path fill="#333333" d="M238.73,156.1c-0.06-1.32-0.29-2.65-0.51-3.96c-1.23-7.21-2.78-14.36-3.2-21.71
+                                c-0.44-7.64-1.33-15.24-2.61-22.81c-2.04-12.14-3.29-24.42-4.55-36.64c-1.25-12.11-2.63-24.09-5.45-35.95
+                                c-1.61-6.77-4.52-12.87-8.09-18.69c-3.8-6.19-9.84-6.27-13.97-0.43c-0.29,0.41-0.59,0.81-0.84,1.24
+                                C192,30,187.89,44.01,186.02,58.65c-1.77,13.86-2.46,27.87-4.56,41.68c-3.24,21.3-3.18,42.82-5.28,63.21
+                                c0.05,3.13-0.13,5.3,0.53,7.42c0.27,0.87,0.73,1.54,1.65,1.64c0.89,0.1,1.68-0.31,2.01-1.16c0.42-1.08,0.86-2.19,1-3.32
+                                c0.46-3.63,0.89-7.27,1.14-10.92c0.85-12.12,1.56-24.26,2.43-36.38c0.48-6.64,1.19-13.26,1.74-19.9
+                                c0.16-1.96,0.58-3.65,2.86-4.07c6.38-1.18,12.66-2.92,19.16-3.37c1.25-0.08,3.13-0.54,3.37,1.17c0.24,1.7-1.7,1.66-2.86,1.89
+                                c-5.88,1.12-11.79,2.13-17.68,3.19c-1.06,0.19-2.77-0.1-2.5,1.6c0.26,1.65,1.87,0.88,2.92,0.82c0.82-0.05,1.62-0.39,2.43-0.53
+                                c7.87-1.37,15.73-2.79,23.62-4.04c3.92-0.62,4.42-0.32,5.26,3.32c2.88,12.49,5.45,25.05,5.64,37.93c0.06,4.19,0.57,8.31,1.3,12.4
+                                c0.44,2.46,1.21,4.86,2.96,6.78c1.11,1.21,2.17,2.87,4.11,2.04C238.93,159.34,238.8,157.59,238.73,156.1z M218,90.72
+                                c-8.72-0.41-17.19,1.23-25.65,3.12c-4.9,1.1-4.94,0.95-4.81-4.17c0.01-0.33,0-0.66,0-0.94c1.97-19.19,2.37-38.56,8.98-56.99
+                                c1.99-5.56,4.52-10.7,8.35-15.18c2.03-2.38,2.74-2.38,4.51,0.07c2.49,3.44,3.58,7.49,4.56,11.51c1.84,7.6,3.3,15.24,2.97,23.15
+                                c-0.27,6.32,0.68,12.57,1.81,18.82c1.04,5.71,1.5,11.53,2.23,17.3C221.24,89.66,220.53,90.84,218,90.72z M228.65,114.65
+                                c-1.44-7.29-2.93-14.58-4.26-21.9c-0.59-3.26-0.85-6.59-1.27-9.88c-1.73-13.66-4.57-27.22-3.67-41.13
+                                c0.1-1.6-0.27-3.24-0.26-4.88c3.9,9.48,5.17,19.47,5.64,29.58c0.23,4.83,0.9,9.58,1.64,14.34c0.69,4.43,1.35,8.89,1.58,13.35
+                                c0.46,8.82,2.65,17.4,3.42,26.18c0.2,2.3,0.51,4.58-0.12,6.92C229.71,123.18,229.49,118.85,228.65,114.65z M232.18,137.01
+                                c2.29,6.3,2.37,12.33,3.95,18.67C232.29,152.8,230.75,144.98,232.18,137.01z"/>
+                        </g>
+                        <g>
+                            <path fill="#333333" d="M154.33,151.95c-0.85-3.05-2.18-5.91-3.52-8.79c-3.53-7.61-8.81-14.11-13.1-21.22
+                                c-5.93-9.83-11.5-19.88-17.24-29.84c-3.16-5.48-6.35-10.94-9.52-16.42c-2.1-3.63-1.86-3.6,1.86-5.95
+                                c7.17-4.53,14.33-9.16,20.39-15.16c6.11-6.05,9.4-13.43,10.6-22.06c1.38-9.85-4.29-17.89-13.57-21.18
+                                c-9.76-3.47-19.31-1.66-28.8,1.42c-1.82,0.59-2.12,1.9-2.25,3.44c-0.36,4.48-0.97,8.96-1.01,13.44
+                                c-0.13,14.3-2.29,28.5-1.56,42.88c0.83,16.46-1.44,32.93-0.73,45.75c0,12.66-0.01,21.65,0.01,30.65c0,2.36,0.45,4.65,1.38,6.81
+                                c0.55,1.27,1.54,2.32,3.03,2.18c1.29-0.12,1.88-1.24,2.22-2.42c1.14-4.03,1.68-8.12,1.79-12.31c0.34-13-0.93-25.97-0.7-38.95
+                                c0.17-10.16,0.03-20.32-0.32-30.47c-0.26-7.65-1-15.36-0.32-22.94c0.95-10.44,1.6-20.91,2.38-31.36
+                                c0.22-2.98,1.57-4.32,4.11-4.65c2.96-0.38,5.97-0.4,8.96-0.53c4.76-0.2,8.4,1.91,10.96,5.77c5.13,7.75,5.97,16.05,2.85,24.78
+                                c-4.13,11.54-13.5,17.63-23.8,22.66c-2.78,1.36-3.38,1.87-2.48,4.72c0.8,2.52,1.94,4.96,3.2,7.29
+                                c10.64,19.6,21.25,39.22,32.09,58.7c2.98,5.36,6.02,10.76,9.99,15.52c0.71,0.85,1.25,2.39,2.63,1.75
+                                C155.49,154.72,154.65,153.12,154.33,151.95z M100.29,152.88c-1.93-1.57-1.72-3.64-1.73-5.52c-0.06-6.65-0.03-13.31,0.05-19.96
+                                c0.16-12.97-0.24-25.92,0.46-38.91c0.46-8.58,0.51-17.27-0.29-25.91c-0.27-2.93-0.43-5.92,0.98-8.77
+                                c1.78,31.07,1.97,62.12,2.06,93.17C101.82,148.97,101.37,150.91,100.29,152.88z M99.99,44.82c1.16-8.96-0.3-18.1,1.73-27.94
+                                C102.85,21.05,101.68,39.23,99.99,44.82z M129.69,14.86c5.73,1.63,9.69,5.09,10.9,10.49c1.52,6.81-0.19,13.31-4.2,19.27
+                                C137.82,33.85,137.07,23.68,129.69,14.86z"/>
+                        </g>
+                    </g>
+                </g>
+                </svg>
+            </div>
+        </div>
+        <div id="refresh" class="page-nav" style="width: 3em">
           <a href="/" autofocus>
               <svg id="efffa248-7814-4d07-9f40-012019dc36e8" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.78 239.78"><title>dice</title><path d="M143.92,239.78a24.47,24.47,0,0,1-21.78-13.13L92,169H25.5A24.53,24.53,0,0,1,1,144.5V25.5A24.53,24.53,0,0,1,25.5,1h119A24.53,24.53,0,0,1,169,25.5V40.21L182.8,33a24.55,24.55,0,0,1,33.06,10.36L271,148.8a24.56,24.56,0,0,1-10.36,33.06L155.2,237a24.49,24.49,0,0,1-11.28,2.77ZM152.71,175a12,12,0,0,0,0,24,12,12,0,0,0,0-24ZM221,139.31a12.06,12.06,0,0,0-5.54,1.36,12,12,0,1,0,5.54-1.36ZM46.48,111.55a12,12,0,1,0,12,12A12,12,0,0,0,46.48,111.55ZM117,106.74a12,12,0,1,0,11.44,15.55A12,12,0,0,0,117,106.74ZM185.28,71a12,12,0,0,0,0,24,12,12,0,0,0,5.54-1.37A12,12,0,0,0,185.28,71ZM123.52,34.5a12,12,0,1,0,12,12A12,12,0,0,0,123.52,34.5Z" transform="translate(-0.5 -0.5)"/>
           </a>
@@ -10,7 +105,7 @@
         <div id="cards" class="cards-container">
             {% for card in cards %}
             <div class="cards">
-                <h1>{{ card }}</h1>
+                <h4>{{ card }}</h4>
             </div>
             {% endfor %}
         </div>
