--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="/static/main.css">
 
+        <script src="/static/main.js"></script>
+
         <title>draw this!</title>
     </head>
     <body>
@@ -20,6 +22,20 @@
                 </ul>
             </nav>
         </header>
+
+        <div id="alert" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="toast-header">
+            <strong class="mr-auto">oooops</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close" onclick="close_alert()">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div id=message class="toast-body">
+            Hello, world! This is a toast message.
+          </div>
+        </div>
+
+
         <div class="main">
             {% block main %}
             {% endblock %}
