user can change between languages for the draw

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,6 +18,9 @@
                     <li><a href="/">gallery</a></li>
                     <li><a href="/">create</a></li>
                     <li><a href="/">log-in</a></li>
+                    <li> <a href="/?lang=en">en</a>
+                        | <a href="/?lang=pt">pt</a>
+                    </li>
                     <li><a href="/">about</a></li>
                 </ul>
             </nav>
