user can change level in cards draw

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="/static/main.css">
 
+        <script src="https://kit.fontawesome.com/b5b44905b4.js" crossorigin="anonymous"></script>
         <script src="/static/main.js"></script>
 
         <title>draw this!</title>
@@ -15,12 +16,12 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="/">gallery</a></li>
-                    <li><a href="/">create</a></li>
-                    <li><a href="/">log-in</a></li>
                     <li> <a href="/?lang=en">en</a>
                         | <a href="/?lang=pt">pt</a>
                     </li>
+                    <li><a href="/">gallery</a></li>
+                    <li><a href="/">create</a></li>
+                    <li><a href="/">log-in</a></li>
                     <li><a href="/">about</a></li>
                 </ul>
             </nav>
@@ -34,10 +35,9 @@
             </button>
           </div>
           <div id=message class="toast-body">
-            Hello, world! This is a toast message.
+              <!-- message -->
           </div>
         </div>
-
 
         <div class="main">
             {% block main %}
