--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,9 @@
         <title>draw this!</title>
     </head>
     <body>
+        {% block background %}
+        {% endblock %}
+
         <header>
             <nav>
                 <ul>
