--- a/static/main.css
+++ b/static/main.css
@@ -1,5 +1,6 @@
 :root {
     --black : #3a3a3a;
+    --background: #f9f8f8;
     --gray: grey;
     --accent: #f32553;
 }
@@ -69,6 +70,11 @@ path {
     padding: 2em;
 }
 
+.header{
+    display: inline-flex;
+    align-items: center;
+}
+
 svg.container {
 
 }
@@ -83,9 +89,12 @@ svg.container {
 }
 
 .center-content {
-    display: grid;
-    grid-template-areas: '. header pageNav' '. main .';
+    display: flex;
     max-height: 100vh;
+    justify-content: center;
+    justify-items: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .cards-container{
@@ -143,6 +152,34 @@ svg.container {
 .background .right {
     background-image: url(../static/images/right.svg);
     background-size: cover;
+}
+
+div #dice_button {
+    display: inline-block;
+}
+
+#dice_button a i {
+    font-size: 42pt;
+    transform: rotate(-70deg);
+    color: var(--black);
+    float: right;
+}
+
+#dice_button a i:hover {
+    color: var(--accent)
+}
+
+div #config {
+    padding: 6pt;
+    border-radius: 50px;
+    align-self: flex-end;
+    background: var(--black);
+    color: var(--background) ;
+}
+
+#config:hover {
+    color: var(--background);
+    background-color: var(--accent)
 }
 
 
