--- a/static/main.css
+++ b/static/main.css
@@ -108,7 +108,7 @@ svg.container {
 .cards {
     padding: 25pt;
     text-align: center;
-    margin-bottom: 30pt;
+    margin-top: 30pt;
     background-color: #fffefe;
     width: fit-content;
     box-shadow: 5px 8px 11px 0px rgb(0, 0, 0, .05);
