--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,10 +5,12 @@
         <meta charset="utf-8">
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="/static/main.css">
-
+        <link rel="stylesheet" href="/static/master.css">
+        <link rel="stylesheet" href="/static/index.css">
+        {% block page_style %}
+        {% endblock %}
         <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Raleway:wght@400;500;600&display=swap" rel="stylesheet">
-        
+
         <script src="https://kit.fontawesome.com/b5b44905b4.js" crossorigin="anonymous"></script>
         <script src="/static/main.js"></script>
 
