--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,7 +28,7 @@
                     </li>
                     <li><a href="/">gallery</a></li>
                     <li><a href="/">create</a></li>
-                    <li><a href="/">log-in</a></li>
+                    <li><a href="/login">log-in</a></li>
                     <li><a href="/">about</a></li>
                 </ul>
             </nav>
