implements basico image upload

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,7 @@
                     <li> <a href="/?lang=en">en</a>
                         | <a href="/?lang=pt">pt</a>
                     </li>
-                    <li><a href="/">gallery</a></li>
+                    <li><a href="/gallery">gallery</a></li>
                     <li><a href="/">create</a></li>
                     <li><a href="/login">log-in</a></li>
                     <li><a href="/">about</a></li>
