--- a/static/master.css
+++ b/static/master.css
@@ -57,7 +57,7 @@ nav {
     display: flex;
     font-family: inherit;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
 
 
