--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,7 +32,7 @@
                 {% if session["user_id"]%}
                     <ul>
                         <li><a href="/home">home</a></li>
-                        <li><a href="/login">log-out</a></li>
+                        <li><a href="/logout">log-out</a></li>
                     </ul>
                 {% else %}
                     <ul>
